--- a/output.html
+++ b/output.html
@@ -24,8 +24,8 @@ mladá neumí. A tady je ta kožišina propíchnuta, zrovna uprostřed hřbetu! 
 drazí, trne stará paní, kterýpak nekola toho medvěda píchal do zad? Vždyť se
 tím zkazí celá kůže! To by můj jakživ neudělal, říká si stařena roztrpčeně, ten
 se vždycky strefoval do krku –
-Stránka predmetu OS <a href="https:////www.math.sk/wiki/OperacneSystemy">https:////www.math.sk/wiki/OperacneSystemy</a> je hento.
-Dve URL na riadku <a href="https:////www.google.com/">https:////www.google.com/</a> aj toto <a href="https:////www.stuba.sk">https:////www.stuba.sk</a> je URL.
+Stránka predmetu OS <a href="https://www.math.sk/wiki/OperacneSystemy">https://www.math.sk/wiki/OperacneSystemy</a> je hento.
+Dve URL na riadku <a href="https://www.google.com/">https://www.google.com/</a> aj toto <a href="https://www.stuba.sk">https://www.stuba.sk</a> je URL.
 Zoznam nasleduje
 <ol>
 <li>Zoznam</li>
@@ -33,12 +33,5 @@ Zoznam nasleduje
 <li>vecí</li>
 </ol>
 a toto je nejaký iný text.
-Dalsi oznam nasleduje
-<ol>
-<li>Zoznam</li>
-<li>dalsich</li>
-<li>blbosti</li>
-</ol>
-konec
 </body>
 </html>
